# SPHEREx-lab-tools

./: .gitignore  .gitmodules  README.md  _config.yml  environment.yml
SPHEREx-Calibration-Automation/: python3_installation_requirements.txt
SPHEREx-Calibration-Automation/pylab/pylabcal/config/: setup.cfg  setup_test.cfg
SPHEREx-Calibration-Automation/pylab/pylabcal/config/sequence/: .default_setup.ini.swp  0-75_to_5-0_coarse_scan.ini  0-75_to_5-0_coarse_scan_dark.ini  SLS301_Scan.ini  SLS301_Scan_PDA20c2.ini  SLS301_Scan_PDA20c2_1.ini  anotha_one.ini  asdf.ini  default_seq.ini  default_setup.ini  lockin_test_seq.ini  lockin_test_seq_3400kSource.ini  sample_scan2.ini  seq1.ini  seq2.ini  setup.cfg  setup.ini  setup_test_write.ini  shutter_closed_scan.ini  shutter_open_full_scan.ini  test_seq.ini  tester.ini
SPHEREx-Calibration-Automation/pylab/pylabcal/config/series/: default_series.cfg  series_test.cfg  series_test2.cfg
SPHEREx-lab-wiki/: _config.yml  hardware.md  index.html  software.md
_site/: README.md  feed.xml  index.html  sitemap.xml
docs/: conf.py  index.rst
docs_old/: conf.py  index.rst  labels
examples/: DPE25601.ipynb  LinearStageControl.ipynb  Lockin_Procedure.ipynb  Scratch.ipynb  State Machine Development.ipynb  State Machine Scrapbook.ipynb  pm100_pymeasure.ipynb  query_mySQL_database.ipynb  sr510_pymeasure.ipynb
notebooks/: __init__.py  query_mySQL_database.ipynb
spherexanalysistools/: db.py
spherexlabtools/: __init__.py  analysis.py  experiment.py  loader.py  log.py  parameters.py  record.py  thread.py  widgets.py  workers.py
(+1258 files in other folders)
