;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;
; Setup Parameter File for Spectral Calibration GUI
;
; Contact: Marco Viero (marco.viero@caltech.edu)
;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;

[general]
automate = True

[io]
temp_storage_folder = /data/big_data/temp/
permanent_storage_folder = /data/big_data/

keywords = Test, Development

suffix = date

compression_type = .tgz
storage_type = .parquet

[metadata]
power_meter = True
filter_wheel_1 = True
filter_wheel_2 = True
encoder_1 = True
encoder_2 = True
cryo_temperature = True

[cosmology] ; Cosmology - Planck15
omega_m = 0.3075
omega_l = 0.6910
omega_k = 0.
h       = 0.6774

[monochrometer]
wavelength_start = 75
wavelength_stop = 500
wavelength_step = 10

